
ADD_DEFINITIONS (-DSANDBOX_ROOT_FOLDER="${PROJECT_SOURCE_DIR}/src/xe.sandbox/")

FIND_PACKAGE (OpenGL REQUIRED)

FIND_PACKAGE (OpenCL REQUIRED)
INCLUDE_DIRECTORIES (${OPENCL_INCLUDE_DIRS})

FIND_PACKAGE (glfw3 REQUIRED)
INCLUDE_DIRECTORIES (${GLFW3_INCLUDE_DIR})

# Grouping
FILE (GLOB RES_FILES *.cl *.glsl)

SET (SandboxFiles
	Main.cpp gl_core_3_3.h gl_core_3_3.c PerformanceTest.cpp
)

SOURCE_GROUP (\\ FILES ${SandboxFiles})

ADD_EXECUTABLE (xe.sandbox ${SandboxFiles} ${RES_FILES})

# 
TARGET_LINK_LIBRARIES (xe.sandbox ${Boost_LIBRARIES} ${GLFW3_LIBRARY} ${OPENCL_LIBRARIES} ${OPENGL_LIBRARIES})
